# fancy-tree

./: .gitignore  WIP.md  __init__.py  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
core/: config.py  discovery.py  extraction.py  formatter.py
extractors/: __init__.py  python.py
fancy_tree/: __init__.py  cli.py
fancy_tree/core/: config.py  discovery.py  extraction.py  formatter.py
fancy_tree/extractors/: base.py  c.py  cpp.py  csharp.py  go.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py  typescript.py
tests/: idiot_test.py  test_phase2.py
tests/sample_repo/: test_java.java  test_python.py  test_typescript.ts
